# proyect-de-grado-2

./: .clangd  .gitignore  ARCHITECTURE.md  BUILD_FIXES_APPLIED.md  CMakeLists.txt  CMakePresets.json  COMPLETED_CHANGES.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_STATUS.md  MACOS_BUILD.md  MACOS_PORT_INVESTIGATION.md  README_RENDERER.md  XCODE_SETUP_GUIDE.md  XCODE_SUCCESS.md  config.yaml  error.txt  pfm_reader.py  vcpkg.json
common/gdt/: CMakeLists.txt
common/gdt/gdt/math/: AffineSpace.h  LinearSpace.h  vec.h
common/gdt/gdt/math/vec/: rotate.h
common/gdt/gdt/random/: random.h
common/glad/: CMakeLists.txt
common/glad/include/glad/: glad.h
common/glad/src/: glad.c
renderer/: CMakeLists.txt  Camera.h  ComputePrimitives.cuh  ComputePrimitives.h  GLRender.cpp  GLRender.h  Window.h  buffer_interface.h  common.cuh  common.h  compute_interface.h  cpu_renderer.cpp  image.h  integrator.cuh  integrator.h  integrator_common.h  integrator_cpu_adapter.h  integrator_gpu_adapter.h  main.cpp  nanovdb.cu  platform_macros.h  random_interface.h  ray.cuh  settings.h  weightHeuristics.cuh
renderer/glfWindow/: GLFWindow.cpp  GLFWindow.h
